# mf

./: README.md  mf.cabal  stack.yaml
lib/: Flow.hs  Take2.hs
src/: Main.hs
